<resources>
    <string name="app_name">CapstoneProject</string>
    <string name="start">start</string>
    <string name="skip">Skip</string>
    <string name="finish">finish</string>
    <string name="back">back</string>
    <string name="start_text_advice">By continuing on this application you agree to our Terms of Use and Privacy Policy</string>
    <string name="title_onboarding">Beragam Jenis Media Iklan dalam Satu Aplikasi</string>
    <string name="description_onboarding_1">Tersedia beragam jenis media iklan di setiap kota Indonesia. Anda cukup pilih dan lakukan pemesanan.</string>
    <string name="title_onboarding_2">Booking Di Mana Saja dan Kapan Saja</string>
    <string name="description_onboarding_2">Request dan booking media iklan dimana saja dan kapan saja, tak perlu repot survei lokasi.</string>
    <string name="title_onboarding_3">Ketahui Angka Impresi Iklan Anda untuk </string>
    <string name="description_onboarding_3">Pantau siapa saja yang melihat iklan Anda dari Data Demografi dan Data Traffic yang kredibel dan terpercaya.</string>
    <string name="title_onboarding_4">AI Copywritting untuk Perkembangan Iklan Anda</string>
    <string name="description_onboarding_4">Tak perlu takut kehabisan ide, AI Copywritting kami dapat membantu Anda memberikan ide iklan Anda dengan cepat.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">Error</string>
    <string name="default_text">-</string>
    <string name="loading">Loading...</string>
    <string name="hallo">Hallo</string>
    <string name="ardiansyah">Ardiansyah</string>
    <string name="message">Pesan</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="choose_location">Pilih Lokasi</string>
    <string name="current_location">Lokasi saat ini</string>
    <string name="not_granted">Tidak Diberikan</string>
    <string name="register">Daftar</string>
    <string name="hello_there_join_us_to_get_started">Halo, bergabunglah dengan kami untuk memulai!</string>
    <string name="full_name">Nama lengkap</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Ingat saya</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="or_continue_with">atau lanjutkan dengan</string>
    <string name="don_t_have_an_account">Tidak memiliki akun?</string>
    <string name="login">Masuk</string>
    <string name="hello_there_sign_to_continue">Halo, masuk untuk melanjutkan!</string>
    <string name="next">Selanjutnya</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="role">Peran</string>
    <string name="customer">Pelanggan</string>
    <string name="food_and_beverage_business">Bisnis Makanan dan Minuman</string>
    <string name="non_govermental_organization_ngo">Lembaga Swadaya Masyarakat (LSM)</string>
    <string name="confirm_password">Konfirmasi Kata Sandi</string>
    <string name="already_have_an_account">Sudah memiliki akun?</string>
    <string name="please_fill_in_your_email">Silahkan isi email anda!</string>
    <string name="please_use_a_valid_email">Silahkan gunakan email yang valid!</string>
    <string name="please_fill_in_your_password">Silahkan isi kata sandi anda!</string>
    <string name="please_enter_a_password_of_at_least_8_characters">Silahkan isi kata sandi minimal 8 karakter!</string>
    <string name="enter_the_email_used_on_your_account">Masukkan email yang digunakan pada akun Anda!</string>
    <string name="send">Kirim</string>
    <string name="please_fill_in_your_name">Silahkan isi nama anda!</string>
    <string name="please_enter_a_confirmation_password">Silahkan isi konfirmasi kata sandi!</string>
    <string name="please_enter_a_confirmation_password_of_at_least_8_characters">Silahkan isi konfirmasi kata sandi minimal 8 karakter</string>
    <string name="password_and_confirm_password_are_not_the_same">Kata sandi dan konfirmasi kata sandi tidak sama</string>
    <string name="please_fill_in_your_phone_number">Silahkan isi nomor telepon anda!</string>
    <string name="choose_an_option">Pilih salah satu opsi!</string>
    <string name="food">Makanan</string>
    <string name="history">Riwayat</string>
    <string name="ready_to_donate_food_today">Siap berdonasi makanan hari ini?</string>
    <string name="_2_731">2.731</string>
    <string name="recommendations_for_you">Rekomendasi untuk Anda</string>
    <string name="see_all">Lihat semua</string>
    <string name="lowokwaru">Lowokwaru</string>
    <string name="recent_article">Artikel Terbaru</string>
    <string name="donate">Donasi</string>
    <string name="forgot_password2">Lupa Password</string>
    <string name="add_product">Tambah Product</string>
    <string name="welcome">Selamat Datang</string>
    <string name="post_your_food">Posting makanan Anda</string>
    <string name="tell_us_more_about_your_food">Deskripsikan makanan Anda kepada kami!</string>
    <string name="product_name">Nama Produk</string>
    <string name="description">Deskripsi</string>
    <string name="expiration_date">Tanggal Kedaluwarsa</string>
    <string name="price">Harga</string>
    <string name="category">Kategori</string>
    <string name="donation">Donasi</string>
    <string name="location">Lokasi</string>
    <string name="post">Posting</string>
    <string name="re_upload_photo">Unggah ulang foto</string>
    <string name="please_fill_in_the_name_of_the_food">Silahkan isi nama produk!</string>
    <string name="please_press_the_location_logo_on_the_left">Silahkan tekan logo lokasi disebelah kiri!</string>
    <string name="please_fill_in_the_food_description">Silakan isi deskripsi produk!</string>
    <string name="please_fill_in_the_food_expiration_date">Silakan isi tanggal kadaluarsa produk!</string>
    <string name="please_fill_in_the_price_of_the_food">Silakan isi harga produk!</string>
    <string name="please_take_product_photos">Silakan ambil foto produk!</string>
    <string name="yesterday">Kemarin</string>
    <string name="fill_if_not_donate">* isi jika tidak berdonasi</string>
    <string name="apel_fuji_premium">Apel Fuji Premium</string>
    <string name="rp_0">Rp 0</string>
    <string name="expired_date">Tanggal kadaluarsa</string>
    <string name="order">Order</string>
    <string name="chat">Chat</string>
    <string name="sell">Jual</string>
    <string name="take">Ambil</string>
    <string name="this_is_your_food_post">* Ini adalah postingan makanan Anda</string>
    <string name="profile">Profil</string>
    <string name="name">Nama</string>
    <string name="test_mail_com">test@mail.com</string>
    <string name="logout">Logout</string>
    <string name="loading_users_failed">Gagal memuat pengguna</string>
    <string name="online">Online</string>
    <string name="search">Cari</string>
    <string name="all">Semua</string>
    <string name="payment_summary">Ringkasan Pembayaran</string>
    <string name="payment_method">Metode Pembayaran</string>
    <string name="shipping_cost">Biaya Pengiriman</string>
    <string name="total_payment">Total Pembayaran</string>
    <string name="cash">Cash</string>
    <string name="gopay">Gopay</string>
    <string name="dana">Dana</string>
    <string name="rp_1_000">Rp 1.000</string>
    <string name="_0">0</string>
    <string name="congratulations_the_food_has_been_successfully_posted">Selamat, makanan telah berhasil diposting</string>
    <string name="congratulations_the_account_has_been_successfully_registered">Selamat, akun telah berhasil didaftarkan</string>
    <string name="failed_to_get_user_data_please_try_again">Gagal mendapatkan data pengguna, coba lagi</string>
    <string name="savefood_coins">Koin SaveFood</string>
    <string name="order_successful_please_go_to_the_transaction_page_to_check_the_status">Pesanan berhasil, silakan masuk ke halaman transaksi untuk mengecek status</string>
    <string name="deactive">deactive</string>
    <string name="receiver">Penerima</string>
    <string name="sender">Pengirim</string>
    <string name="transaction_date">Tanggal Transaksi</string>
    <string name="transaction">Transaksi</string>
    <string name="delivery_details">Detail pengirimanan</string>
    <string name="order_details">Detail Order</string>
    <string name="done">Selesai</string>
    <string name="history_details">Detail Riwayat</string>
    <string name="cancel">Batalkan</string>
    <string name="payment_time">Waktu Pembayaran</string>
    <string name="seller">Penjual</string>
    <string name="open_maps">Buka Maps</string>
    <string name="please_install_gmaps_first">Silakan install Gmaps terlebih dahulu</string>
    <string name="gallery">Galeri</string>
    <string name="camera">Kamera</string>
    <string name="congratulations_the_transaction_has_been_successful">Selamat, transaksi telah berhasil</string>
    <string name="the_transaction_has_been_successfully_cancelled">Transaksi telah berhasil dibatalkan</string>
    <string name="there_are_no_transactions_yet">Belum ada transaksi</string>
    <string name="there_are_no_my_product_yet">Belum ada produk</string>
    <string name="there_are_no_products_yet">Belum ada produk</string>
    <string name="voucher">Voucher</string>
    <string name="the_voucher_feature_is_still_not_available">Maaf, fitur voucher masih belum tersedia</string>
    <string name="save_changes">Simpan perubahan</string>
    <string name="edit_profile">Edit profil</string>
    <string name="edit">Edit</string>
    <string name="sorry_the_edit_user_feature_is_still_not_available">Maaf, fitur edit pengguna masih belum tersedia</string>
    <string name="congratulations_the_profile_has_been_successfully_changed">Selamat, profil telah berhasil diubah</string>
    <string name="message_is_empty">Pesan masih kosong</string>
    <string name="my_product">Produk Saya</string>
    <string name="see_my_product">Produk Saya</string>
    <string name="delete">Hapus</string>
    <string name="success">Sukses</string>
    <string name="are_you_sure">Apa anda yakin?</string>
    <string name="are_you_sure_you_want_to_cancel_your_order">Apa anda yakin ingin membatalkan order?</string>
    <string name="keep">Teruskan</string>
    <string name="are_you_sure_to_delete_this_product">Apa anda yakin menghapus produk ini?</string>
    <string name="congratulations_your_product_has_been_successfully_deleted">Selamat produk anda berhasil dihapus</string>
    <string name="masukkan_email_anda">Masukkan email anda</string>
    <string name="detail_pemesan">Detail Pemesan</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="masukkan_nama_lengkap_anda">Masukkan nama lengkap anda</string>
    <string name="nomor_ponsel">Nomor Ponsel</string>
    <string name="masukkan_nomor_ponsel_anda">Masukkan nomor ponsel anda</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="last_search">Pencarian Terakhir</string>
    <string name="location_recomendation">Rekomendasi Lokasi</string>
    <string name="dibatalkan">Dibatalkan</string>
    <string name="lunas">Lunas</string>
    <string name="buat_iklan">Buat Iklan</string>
    <string name="judul_iklan">Judul Iklan</string>
    <string name="masukkan_judul_iklan">Masukkan judul iklan</string>
    <string name="kategori_iklan">Kategori Iklan</string>
    <string name="event">Event</string>
    <string name="makanan_dan_minuman">Makanan dan Minuman</string>
    <string name="produk_komersial">Produk Komersial</string>
    <string name="sosial_dan_komunitas">Sosial dan Komunitas</string>
    <string name="upload_aset_iklan">Upload Aset Iklan</string>
    <string name="supported_formats_png_jpg_mp4">Supported formats: PNG, JPG, MP4</string>
    <string name="maximum_size_100mb">Maximum size: 100MB</string>
</resources>