<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.listads.createads.CreateAdsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_new_story"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="1dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_close_add_new_story"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_100"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_arrow_back_24"
            app:tint="@android:color/darker_gray" />

        <TextView
            android:id="@+id/custom_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/buat_iklan"
            android:textColor="@color/black" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/normal_100"
            android:paddingVertical="@dimen/normal_125">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/small_100"
                app:cardElevation="@dimen/small_100">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/normal_100">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/judul_iklan"
                        android:textColor="@color/black"
                        android:textSize="@dimen/subtitle_1" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_text"
                        android:layout_marginTop="@dimen/small_25"
                        app:hintEnabled="false">

                        <EditText
                            android:id="@+id/et_title"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/bg_edit_text"
                            android:fontFamily="@font/poppins"
                            android:paddingHorizontal="@dimen/normal_100"
                            android:hint="@string/masukkan_judul_iklan"
                            android:textColorHint="@color/text_color_hint"
                            android:importantForAutofill="no" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/kategori_iklan"
                        android:textColor="@color/black"
                        android:layout_marginTop="@dimen/normal_100"
                        android:textSize="@dimen/subtitle_1" />

                    <RadioGroup
                        android:id="@+id/radioGroup1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/rb_event"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/event"/>

                        <RadioButton
                            android:id="@+id/rb_food"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/makanan_dan_minuman"/>

                        <RadioButton
                            android:id="@+id/rb_commercial"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/produk_komersial"/>

                        <RadioButton
                            android:id="@+id/rb_social"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sosial_dan_komunitas"/>

                    </RadioGroup>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/upload_aset_iklan"
                        android:textColor="@color/black"
                        android:layout_marginTop="@dimen/normal_100"
                        android:textSize="@dimen/subtitle_1" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/custom_210"
                        app:cardCornerRadius="@dimen/normal_100"
                        android:backgroundTint="@color/md_grey_100"
                        android:layout_marginTop="@dimen/normal_100">

                        <ImageView
                            android:id="@+id/iv_ads"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/bg_upload"
                            android:scaleType="centerCrop"
                            android:layout_gravity="center"/>

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/supported_formats_png_jpg_mp4"
                        android:textColor="@color/md_grey_600"
                        android:layout_marginTop="@dimen/small_100"
                        android:textSize="@dimen/caption" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/maximum_size_100mb"
                        android:textColor="@color/md_grey_600"
                        android:textSize="@dimen/caption" />

                    <Button
                        android:id="@+id/btn_upload"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/button_primary"
                        android:layout_marginTop="@dimen/normal_200"
                        android:background="@drawable/bg_btn_color_primary"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/buat_iklan"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/body_1"
                        app:backgroundTint="@null"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/small_25" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>