<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bookingprocess.bookingdetail.edit_profile.EditProfileOrdererActivity"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_edit"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageButton
            android:id="@+id/btn_close_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_100"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_arrow_back_24"
            app:tint="@android:color/darker_gray" />

            <TextView
                android:id="@+id/custom_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/detail_pemesan"
                android:textColor="@color/black" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_edit" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/normal_100"
            android:paddingVertical="@dimen/normal_150">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/nama_lengkap"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text"
                android:layout_marginTop="@dimen/small_25"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/et_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:fontFamily="@font/poppins"
                    android:inputType="text"
                    android:hint="@string/masukkan_nama_lengkap_anda"
                    android:paddingHorizontal="@dimen/normal_100"
                    android:textColorHint="@color/text_color_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_100"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/nomor_ponsel"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text"
                android:layout_marginTop="@dimen/small_25"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:fontFamily="@font/poppins"
                    android:inputType="phone"
                    android:hint="@string/masukkan_nomor_ponsel_anda"
                    android:paddingHorizontal="@dimen/normal_100"
                    android:textColorHint="@color/text_color_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_100"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/email"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text"
                android:layout_marginTop="@dimen/small_25"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:fontFamily="@font/poppins"
                    android:inputType="textEmailAddress"
                    android:hint="@string/masukkan_email_anda"
                    android:paddingHorizontal="@dimen/normal_100"
                    android:textColorHint="@color/text_color_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/normal_150"
                    android:layout_marginBottom="@dimen/normal_200"
                    android:background="@drawable/bg_btn_color_secondary"
                    android:text="@string/cancel"
                    android:textColor="@color/md_grey_800"
                    app:backgroundTint="@null"
                    android:layout_marginEnd="@dimen/small_100"/>

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_150"
                    android:layout_marginBottom="@dimen/normal_200"
                    android:background="@drawable/bg_btn_color_primary"
                    android:text="@string/save_changes"
                    app:backgroundTint="@null"
                    android:layout_marginStart="@dimen/small_100"/>
            </LinearLayout>


        </LinearLayout>



    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>