<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
       />

        <EditText
            android:id="@+id/et_search_result"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/bg_edit_text"
            android:drawableStart="@drawable/baseline_search_24"
            android:drawablePadding="8dp"
            android:drawableTint="@android:color/darker_gray"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="70dp"
        android:paddingStart="16dp"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_search_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/lasttext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_search"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_recent_searches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/rectext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_recomendation"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_recommendations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />
    </LinearLayout>
</FrameLayout>
